<resources>
    <string name="app_name">Journal</string>
    <string name="create_new_journal">Create new journal</string>
    <string name="create_a_new_journal">Create a new Journal</string>
    <string name="pen_down_your_thoughts">Pen down your thoughts…</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnCreate">Create</string>
    <string name="logo">Logo</string>
    <string name="start_journaling">Start Journaling</string>
    <string name="create_your_personal_journal">Create your personal journal</string>
    <string name="tap_the_plus_button_to_get_started">Tap the plus button to get started.</string>
    <string name="delete_journal">Delete</string>
    <string name="journalOptions">Options</string>
    <string name="meditate_now">Meditate</string>
    <string name="stop_meditation">Stop</string>
    <string name="journal_location">Journal location</string>
    <string name="allow_location_permissions">Please allow location permissions.</string>
    <string name="finding_location">Gathering co-ordinates…</string>
    <string name="location_info">Latitude: %1\$s, Longitude: %2\$s</string>
    <string name="meditation_desc">Meditation</string>
</resources>