<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_add_journal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="@dimen/valSixteen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/valSixteen"
            android:gravity="center"
            android:text="@string/create_a_new_journal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/valSixteen"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/valSixteen"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextJournal"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/valSixteen"
                android:gravity="start|bottom"
                android:hint="@string/pen_down_your_thoughts"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/valHundred"
                android:minLines="3"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/locationImage"
                android:layout_width="40dp"
                android:layout_height="38dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/journal_location"
                android:gravity="start|bottom"
                android:src="@drawable/location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/valSixty"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/valEight"
                android:layout_weight="1"
                android:onClick="onCloseNewJournalDialog"
                android:text="@string/btnCancel" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/valEight"
                android:layout_weight="1"
                android:text="@string/btnCreate" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>